@startuml
left to right direction

skinparam package {
  BackgroundColor LightBlue
  BorderColor Blue
  FontColor Black
}

skinparam class {
  BackgroundColor LightGray
  BorderColor Black
  FontColor Black
}

package "Authority Managaement" {
  class Authorities
}


package "User Management" {
  class Passenger
  class Penalty
}

package "Vehicle Management" {
  class Bus
  class Driver
}

package "Route & Schedule Management" {
  class Route
  class Schedule
}

package "Booking & Ticketing" {
  class Bookings
  class Tickets
  class Boarding
}

package "Location & Feedback" {
  class LiveLocation
  class Feedback
}

Schedule -- Bus : BusID
Schedule -- Driver : DriverID
Schedule -- Route : RouteID

Bookings -- Schedule : JourneyID
Bookings -- Passenger : UserID

Boarding -- Bookings : BookingID
Boarding -- Schedule : JourneyID

LiveLocation -- Bus : BusID

Penalty -- Passenger : UserID

Feedback -- Passenger : UserID
Feedback -- Bus : BusID

Tickets -- Bookings : BookingID

@enduml
